<resources>
    <string name="app_name">Pints Pints Pints</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="background_image_of_drinks">Background image of drinks</string>
    <string name="string_background_image_of_drinks">background image</string>
    <string name="ul">UL</string>
    <string name="normal">Normal</string>
    <string name="pure_satellite">Pure Satellite</string>
    <string name="satellite">Satellite</string>
    <string name="my_location">My Location</string>
    <string name="add_item">Add Item</string>
    <string name="enter_a_new_item">Enter a new item</string>
    <string name="default_text">Default text</string>
    <string name="clock">Clock</string>
    <string name="timer">00:00:00</string>
    <string name="timerMs">:00</string>
    <string name="stopText">Stop</string>
    <string name="startText">Start</string>
    <string name="resetText">Reset</string>
    <string name="stopwatchBack">background of stopwatch</string>
    <string name="hello_blank_fragment">Hello Blank fragment</string>
    <string name="drinks_count">DRINKS COUNT</string>
    <string name="wine">wine</string>
    <string name="beer">beer</string>
    <string name="spirit">spirit</string>
    <string name="cider">cider</string>
    <string name="stout">stout</string>
    <string name="_0">0</string>
    <string name="_count">0</string>
    <string name="wineCount">0</string>
    <string name="beerCount">0</string>
    <string name="spiritCount">0</string>
    <string name="ciderCount">0</string>
    <string name="stoutCount">0</string>
    <string name="drinksCount">title</string>
    <string name="count">count</string>
    <string name="reset">reset</string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="tools">Tools</string>
    <string name="timers">Timers</string>
    <string name="checklist">Checklist</string>
    <string name="counter">Counter</string>
    <string name="drinking_games">Drinking Games</string>
    <string name="kings_cup">Kings Cup</string>
    <string name="beer_pong">Beer Pong</string>
    <string name="pints_pints_pints">Pints Pints Pints</string>
    <string name="your_local_drinking_app">Your local drinking app</string>
    <string name="stopwatch">StopWatch</string>
    <string name="timerString">Timer</string>
    <string name="settings">settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search_icon">search icon</string>
    <string name="drinkawarelogo">drinkawarelogo</string>
    <string name="para1"><![CDATA[We have partnered with Drinkaware Ireland to help raise awareness surrounding alcohol consumption. It is extremely important that we practice safe drinking even while having fun on our nights out or when we\'re drinking with our friends & family at home.]]></string>
    <string name="para2"><![CDATA[Drinkaware Ireland has a site that allows you to become familiar with topics like \'Mental Health & Alcohol\', \'Understanding Alcohol\' & \'Alcohol Consumption Guides\'. Please press on the drinkaware.ie image above to be taken to their site and learn about safe drinking.]]></string>
    <string name="alcoholguide">alcoholguide</string>
    <string name="para3">Different types of alcohol contain different amounts of alcohol so it is important to know how much you\'re actually consuming based on what you are drinking. The image above is a good guide to follow to see how much alcohol is entering your body.</string>
    <string name="drinks_counter">Drinks Counter</string>
    <string name="total_drinks_consumed">total drinks consumed</string>
    <string name="games">Games</string>
    <string name="drinkaware">Drink Aware</string>
    <string name="profile">Profile</string>
    <string name="Profile_details">Bobby O\'Brien \n Age:21</string>
    <string name="profile_description">Hey I\'m bobby O\'Brien I love going out drinking with my friends \n \n \n \n \n Post go below here </string>
    <string name="description">Description</string>

</resources>