<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".DrinksCountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/title"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="drinks count"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/drinksCount"
            android:text="@string/drinks_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:typeface="serif"
            android:visibility="visible" />

        <Button
            android:id="@+id/wine"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="wineCount"
            android:text="@string/wine"
            android:typeface="serif"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/wineCount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="count"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/wineCount"
            android:minHeight="50dp"
            android:textColorHint="@color/black"
            android:typeface="serif"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/beer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="beerCount"
            android:text="@string/beer"
            android:typeface="serif"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/beerCount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="count"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/beerCount"
            android:minHeight="50dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/spirit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="spiritCount"
            android:text="@string/spirit"
            android:typeface="serif"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/spiritCount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="count"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/spiritCount"
            android:minHeight="50dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/cider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="ciderCount"
            android:text="@string/cider"
            android:typeface="serif"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/ciderCount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="count"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ciderCount"
            android:minHeight="50dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/stout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="stoutCount"
            android:text="@string/stout"
            android:typeface="serif"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/stoutCount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="count"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/stoutCount"
            android:minHeight="50dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/reset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="resetCount"
            android:backgroundTint="#FF0000"
            android:text="@string/reset"
            android:typeface="serif"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>