<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/backgrounddrinks"
    android:gravity="bottom"
    android:padding="20dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/drink"
        android:contentDescription="@string/background_image_of_drinks" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/pints_pints_pints"
        android:textColor="#BB30EF"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_local_drinking_app"
        android:textColor="#BB30EF"
        android:textSize="14sp" />
</LinearLayout>