<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="595dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/UL_btn"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:backgroundTint="#85307A"
        android:text="@string/ul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="124dp"
        android:layout_height="147dp"
        android:background="#96D2EC"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map">

        <RadioButton
            android:id="@+id/normal_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/satellite_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pure_satellite" />

        <RadioButton
            android:id="@+id/pure_satellite_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satellite" />

    </RadioGroup>

    <Button
        android:id="@+id/myLocBtn"
        android:layout_width="116dp"
        android:layout_height="70dp"
        android:backgroundTint="#F16C06"
        android:text="@string/my_location"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>