<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout
        android:id="@+id/parentFrameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/linearLayout">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView

                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/timer"
                    android:textColor="#004254"
                    android:textSize="60sp" >

                </TextView>

                <TextView
                    android:id="@+id/timerMs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/timerMs"
                    android:textColor="#004254"
                    android:textSize="20sp" >

                </TextView>
            </LinearLayout>

            <!--Begin Button Linear Layout -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <Button
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="#7A1100"
                    android:shadowColor="#DF726E"
                    android:text="@string/stopText"
                    android:id="@+id/buttonStop"
                    android:visibility="gone"
                    android:onClick="stopClick">
                </Button>
                <Button
                    android:layout_marginLeft="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:shadowColor="#FBEBC5"
                    android:layout_weight="1"
                    android:text="@string/startText"
                    android:id="@+id/buttonStart"
                    android:onClick="startClick">
                </Button>
                <Button
                    android:layout_marginRight="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:shadowColor="#959597"
                    android:text="@string/resetText"
                    android:id="@+id/buttonReset"
                    android:onClick="resetClick">
                </Button>
            </LinearLayout>
            <!--End Button Linear Layout -->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content">
                </ImageView>
            </LinearLayout>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/scrollView">
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>